--- a/package.json
+++ b/package.json
@@ -6,13 +6,22 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "shadcn": "npx shadcn@latest add"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.31.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@types/mongoose": "^5.11.96",
+    "@types/qs": "^6.14.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.540.0",
+    "mogodb": "^0.0.1-security",
+    "mongoose": "^8.17.2",
     "next": "15.5.0",
+    "qs": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind": "^4.0.0",
