--- a/package.json
+++ b/package.json
@@ -11,22 +11,36 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.31.3",
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@types/mongoose": "^5.11.96",
     "@types/qs": "^6.14.0",
+    "@types/react-toastify": "^4.0.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
+    "eslint-plugin-unused-imports": "^4.2.0",
     "lucide-react": "^0.540.0",
     "mogodb": "^0.0.1-security",
     "mongoose": "^8.17.2",
     "next": "15.5.0",
+    "next-cloudinary": "^6.16.0",
+    "next-themes": "^0.4.6",
     "qs": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
+    "react-toast": "^1.0.3",
+    "react-toastify": "^11.0.5",
+    "sonner": "^2.0.7",
     "svix": "^1.74.1",
     "tailwind": "^4.0.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
